[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.92402, 9.71526 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.71834
height = 4.64114

[node name="Player" type="KinematicBody2D"]
position = Vector2( 63.4877, 140.85 )
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WallDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]
position = Vector2( 0.038311, 1.55319 )
shape = SubResource( 2 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="body_entered" from="WallDetector" to="." method="_on_WallDetector_body_entered"]
[connection signal="body_exited" from="WallDetector" to="." method="_on_WallDetector_body_exited"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WallJumpTimer" to="." method="_on_WallJumpTimer_timeout"]
